Fix height of search results on mobile, add border same as detailed search view

--- a/public/template/src/scss/components/_search.scss
+++ b/public/template/src/scss/components/_search.scss
@@ -136,6 +136,10 @@ $errorColor: map_get($colors, alert);
     margin: 0;
     max-height: 70vh;
     overflow-y: scroll;
+
+    @include breakpoint(small only) {
+        height: calc(100vh - 12.67rem);
+    }
 }
 .l-live-search__result {
     padding: 0;
